horizontal scroll bug test 5

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ a {
 @media (max-width: 768px) {
   .ball {
    position: absolute;
-   margin-top: 0px;
+   margin-top: 0vh;
    width: 750px;
   height: 750px;
   z-index: 0;
@@ -567,7 +567,7 @@ a {
   }
   
 .section-main {
-  width: 100vw;
+  width: 100%;
   height: 85vh;
   display: flex;
   flex-direction: column;
@@ -652,7 +652,7 @@ a {
   z-index: 0;
 }
   .design h1 {
-    font-size: clamp(4rem, 14vw, 10rem);
+    font-size: clamp(1.5rem, 2vw, 2rem);
   }
 }
   .effect-container {
@@ -913,8 +913,10 @@ a {
   
   /* Mobile Responsive */
   @media screen and (max-width: 768px) {
+    html, body { overflow-x: hidden; }
     .main {
       height: 120vh;
+      overflow-x: hidden;
     }
     .main__container {
       display: grid;
@@ -927,7 +929,7 @@ a {
     }
      
   .section-main {
-    scale: 1.1;
+    
     margin-top: 0px;
     text-align: center;
     display: flex;
@@ -1073,6 +1075,15 @@ a {
   justify-content: space-between;
 }
 @media (max-width: 768px) {
+  .large-text h2 {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #ffffff;
+  text-align: left;
+  margin-bottom: clamp(2.5rem, 3vw, 5rem);
+  line-height: 0.9; /* Tighter spacing than default */
+  
+}
   .services-card {
     flex: 1 1 100%;
     max-width: 100%;
@@ -1484,7 +1495,8 @@ a {
 
   #image-scroll {
     height: auto;
-    overflow: visible;
+    overflow-x: hidden;   /* or clip */
+    overflow-y: visible;
     margin-top: -15vh;
   }
   .image-card {
